--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "csaf"
-version = "0.1.0"
+description = "An implementation of the Common Security Advisory Framework (CSAF)"
+keywords    = ["security", "advisory", "vulnerability"]
+categories = ["parser-implementations"]
+version = "0.3.0"
 edition = "2018"
 authors = ["Blake Johnson"]
 license = "MIT"
+repository = "https://github.com/voteblake/csaf-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
