--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 url = { version = "2.x", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 cvss = { version = "1.x", features = ["serde"] }
+rustsec = "0.24"
 
 [dev-dependencies]
 serde_json = "1.0"
