--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ url = { version = "2.x", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 cvss = { version = "1.x", features = ["serde"] }
 rustsec = "0.24"
+crates-index = "0.17"
 
 [dev-dependencies]
 serde_json = "1.0"
