--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ description = "An implementation of the Common Security Advisory Framework (CSAF
 keywords    = ["security", "advisory", "vulnerability"]
 categories = ["parser-implementations"]
 version = "0.3.2"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.0"
 authors = ["Blake Johnson"]
 license = "MIT"
 repository = "https://github.com/voteblake/csaf-rs"
