fix: represent the CVSS v2 section as "any JSON"
The current definition of "string" doesn't work out. I understand that
there currently is no v2 definition available, however if a v2 section
is present, now it will fail to parse the file as a "string" is expected
but a "map" is found.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ cvss = { version = "2", features = ["serde"] }
 rustsec = { version = "0.26", optional = true }
 # Has to be kept in sync with version used by rustsec
 crates-index = { version = "0.19", optional = true }
-serde_with = "2"
+serde_json = "1"
+serde_with = "3"
 packageurl = "0.3"
 cpe = "0.1.2"
 
