--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,15 @@ serde = { version = "1", features = ["derive"] }
 url = { version = "2", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 cvss = { version = "2", features = ["serde"] }
-rustsec = { version = "0.26", optional = true }
-# Has to be kept in sync with version used by rustsec
-crates-index = { version = "0.19", optional = true }
 serde_json = "1"
 serde_with = "3"
 packageurl = "0.3"
 cpe = "0.1.2"
 
+# rustsec is pinned as we need to ensure we use the same version of crates-index
+# rustsec will update crates-index in patch version releases
+rustsec = { version = "=0.26.5", optional = true }
+crates-index = { version = "0.19", optional = true }
 
 [features]
 default = ["rustsec-interop"]
