--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ keywords    = ["security", "advisory", "vulnerability"]
 categories = ["parser-implementations"]
 version = "0.4.0"
 edition = "2021"
-rust-version = "1.60.0"
+# When changing, also update .github/workflows/check.yml for CI MSRV check
+rust-version = "1.64.0"
 authors = ["Blake Johnson"]
 license = "MIT"
 repository = "https://github.com/voteblake/csaf-rs"
